--- a/index.html
+++ b/index.html
@@ -83,98 +83,78 @@
 
 
   
- <section id="about">
-        <div class="container">
+ <section id="about" style="background-color: white; padding: 60px 0;">
+    <div class="container">
 
-            <div class="section-header">
-                <h2 class="section-title wow fadeInDown">About Us</h2>
-                <p class="wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p>
-            </div>
-<div class="robot">
-            <img src="robot.avif" alt="Robot" class="scrolling-robot">
+        <div class="section-header">
+            <h2 class="section-title wow fadeInDown" style="color: lightblue;">Empowering NRENs: Harnessing Generative AI for Enhanced Research and Education Across the Asia Pacific</h2>
         </div>
-            <div class="row">
-                <div class="col-sm-6 wow fadeInLeft">
-                  <img class="img-responsive" src="images/about.webp" alt="">
-                </div>
+        <div class="row">
+            <div class="col-sm-6 wow fadeInLeft">
+                <img class="img-responsive" src="images/about.webp" alt="">
+            </div>
 
-                <div class="col-sm-6 wow fadeInRight">
-                    <h3 class="column-title">AP GAINED Project</h3>
-                    <p>The AP GAINED (Asia-Pacific Generative AI Integration with NRENs) initiative is a cutting-edge project aimed at transforming the National Research and Education Networks (NRENs) across the Asia-Pacific region. By harnessing the power of generative AI, this project seeks to 
-					enhance the capabilities of NRENs, providing advanced tools for research, education, and collaboration. </p>
- <p>The integration of AI-driven solutions will allow NRENs to offer more personalized and intelligent services, facilitate cross-border educational and research collaborations, and streamline the management of vast amounts of data. Through AP GAINED, the Asia-Pacific region will be positioned at the forefront of educational and research networking, leveraging AI to bridge gaps, foster
- innovation, and drive progress across various academic and research domains.</p>
- <ul class="listarrow">
-<li><i class="fa fa-angle-double-right"></i></li>
-<li><i class="fa fa-angle-double-right"></i></li>
-<li><i class="fa fa-angle-double-right"></i></li>
-
-</ul> 
-
-                </div>
+            <div class="col-sm-6 wow fadeInRight">
+                <h3 class="column-title" style="color: lightblue;">AP GAINED Project</h3>
+                <p style="color:grey;">AP-GAINED is a capacity-building initiative designed to empower National Research and Education Networks (NRENs) throughout the Asia Pacific region to effectively harness the power of Generative AI (GenAI).</p>
+                <p style="color:grey;">Many NRENs in Least Developed Countries (LDCs) and Lower Middle-Income Countries (LMICs) struggle with limited resources and expertise to effectively integrate GenAI. The fast-evolving nature of GenAI adds pressure on these resources. This project aims to address this gap by developing a scalable capacity-building program for NREN staff, prioritizing LDCs and LMICs while providing a model that can be applied globally. Unlike existing initiatives focused on technical skills and infrastructure, this program uniquely targets the potential of GenAI, essential for NRENs in LDCs and LMICs to support advanced research, deliver innovative education, and maximize their developmental impact.</p>
+                <ul class="listarrow" style="color:grey;">
+                    <li><i class="fa fa-angle-double-right" style="color:grey;"></i>Building a tiered curriculum</li>
+                    <li><i class="fa fa-angle-double-right" style="color:grey;"></i>Developing a comprehensive knowledge base</li>
+                    <li><i class="fa fa-angle-double-right" style="color:grey;"></i>Emphasizing hands-on application</li>
+                    <li><i class="fa fa-angle-double-right" style="color:grey;"></i>Fostering a community of practice</li>
+                </ul>
+                <a href="about.html">
+                    <button class="learn-more-btn">Learn more</button>
+                </a>
             </div>
         </div>
-    </section><!--/#about-->
+    </div>
+</section><!--/#about-->
+
 	
 	<section id="services">
     <div class="container">
 
         <div class="section-header">
             <h2 class="section-title wow fadeInDown">Our Activities</h2>
-            <p class="wow fadeInDown">Explore how we use generative AI tools to enhance the National Research and Education Networks (NRENs) in Sri Lanka. <br> Discover our key initiatives and advancements.</p>
-        </div>
+             </div>
 
-        <div class="row features">
-            <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms">
-                <div class="media service-box">
-                    <div class="pull-left">
-                        <i class="fa fa-cogs"></i>
-                    </div>
-                    <div class="media-body">
-                        <h4 class="media-heading">AI-Powered Network Optimization</h4>
-                        <p>Leveraging generative AI to optimize network performance and efficiency across educational institutions.</p>
-                    </div>
-                </div>
-            </div><!--/.col-md-4-->
-
-            <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">
-                <div class="media service-box">
-                    <div class="pull-left">
-                        <i class="fa fa-robot"></i>
-                    </div>
-                    <div class="media-body">
-                        <h4 class="media-heading">Automated Infrastructure Management</h4>
-                        <p>Utilizing AI tools to automate and manage network infrastructure, reducing manual intervention and improving reliability.</p>
-                    </div>
-                </div>
-            </div><!--/.col-md-4-->
-
-            <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="200ms">
-                <div class="media service-box">
-                    <div class="pull-left">
-                        <i class="fa fa-line-chart"></i>
-                    </div>
-                    <div class="media-body">
-                        <h4 class="media-heading">Data-Driven Insights and Reporting</h4>
-                        <p>Generating comprehensive insights and reports using AI to enhance decision-making and strategic planning for NRENs.</p>
-                    </div>
-                </div>
-            </div><!--/.col-md-4-->
-
-            <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="300ms">
-                <div class="media service-box">
-                    <div class="pull-left">
-                        <i class="fa fa-cloud"></i>
-                    </div>
-                    <div class="media-body">
-                        <h4 class="media-heading">Cloud-Based AI Solutions</h4>
-                        <p>Deploying cloud-based AI solutions to enhance scalability and accessibility of network services and resources.</p>
-                    </div>
-                </div>
-            </div><!--/.col-md-4-->
+        
 
             
-        </div><!--/.row-->    
+        <div class="card-container">
+        <div class="card">
+            <div class="icon">📚</div>
+            <h3>Curriculum Preparation Workshop</h3>
+            <p>A comprehensive curriculum offering foundational AI knowledge tailored to NRENs’ needs.</p>
+            <button class="learn-more-btn">Learn more</button>
+        </div>
+        <div class="card">
+            <div class="icon">💻</div>
+            <h3>Local Training Pilot Projects & Curriculum Revision</h3>
+            <p>Practical training allowing NREN staff to apply GenAI tools to real-world scenarios.</p>
+            <button class="learn-more-btn">Learn more</button>
+        </div>
+        <div class="card">
+            <div class="icon">🌐</div>
+            <h3>Two Regional Training Workshops</h3>
+            <p>Building a community for ongoing support and knowledge sharing in GenAI.</p>
+            <button class="learn-more-btn">Learn more</button>
+        </div>
+		<div class="card">
+            <div class="icon">🌐</div>
+            <h3> Online Educational Resources</h3>
+            <p>Building a community for ongoing support and knowledge sharing in GenAI.</p>
+            <button class="learn-more-btn">Learn more</button>
+        </div>
+		<div class="card">
+            <div class="icon">🌐</div>
+            <h3>Publications</h3>
+            <p>Building a community for ongoing support and knowledge sharing in GenAI.</p>
+            <button class="learn-more-btn">Learn more</button>
+        </div>
+    </div>
     </div><!--/.container-->
 </section><!--/#services-->
 
@@ -188,6 +168,9 @@
 			<p><a href="#" class="get-started">Get It Now!!</a></p>
 		</div><!-- /.Container -->
 	</section>
+	
+
+	
      <section id="our-team">
         <div class="container">
             <div class="section-header">
@@ -253,17 +236,17 @@ OUR TEAM
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="300ms">
                         <div class="team-img">
-                            <img class="img-responsive" src="images/team/04.jpg" alt="">
+                            <img class="img-responsive" src="images/team/04.png" alt="">
                         </div>
                         <div class="team-info">
-                            <h3></h3>
-                            <span></span> 
+                            <h3>ISIF ASIA</h3>
+                            <span>INFORMATION SOCIETY INNOVATION FUND IN ASIA</span> 
                         </div> 
                         <ul class="social-icons">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.facebook.com/ISIF.asia/"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.linkedin.com/posts/apnic-foundation_grants-asiapacific-fundingnews-activity-7160107128668491776-Qlix/"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://apnic.foundation/isif-asia/apply-for-funding/"><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href="https://www.linkedin.com/posts/apnic-foundation_grants-asiapacific-fundingnews-activity-7160107128668491776-Qlix/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -526,37 +509,41 @@ OUR TEAM
             <h2 class="section-title wow fadeInDown">Contact Us</h2>
             <p class="wow fadeInDown">Get in touch with us through social media or our contact information below.</p>
         </div>
-    </div>
 
-    <div class="container">
         <div class="row">
-            <!-- Social Media Card -->
-            <div class="col-sm-6 col-md-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms">
-                <div class="media service-box">
-                    <div class="pull-left">
-                        <i class="fa fa-share-alt"></i>
+            <!-- Contact Form Card -->
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Contact Form</h3>
                     </div>
-                    <div class="media-body">
-                        <h4 class="media-heading">Follow Us</h4>
-                        <p>Connect with us on social media:</p>
-                        <a href="https://www.facebook.com/yourpage" target="_blank">
-                            <i class="fa fa-facebook"></i> Facebook
-                        </a><br>
-                        <a href="https://www.linkedin.com/company/yourcompany" target="_blank">
-                            <i class="fa fa-linkedin"></i> LinkedIn
-                        </a>
+                    <div class="card-body">
+                        <form id="main-contact-form" name="contact-form" method="post" action="#">
+                            <div class="form-group">
+                                <input type="text" name="name" class="form-control" placeholder="Name" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" name="email" class="form-control" placeholder="Email" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="subject" class="form-control" placeholder="Subject" required>
+                            </div>
+                            <div class="form-group">
+                                <textarea name="message" class="form-control" rows="8" placeholder="Message" required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Send Message</button>
+                        </form>
                     </div>
                 </div>
-            </div><!--/.col-md-6-->
+            </div>
 
             <!-- Contact Information Card -->
-            <div class="col-sm-6 col-md-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">
-                <div class="media service-box">
-                    <div class="pull-left">
-                        <i class="fa fa-info-circle"></i>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Contact Information</h3>
                     </div>
-                    <div class="media-body">
-                        <h4 class="media-heading">Contact Information</h4>
+                    <div class="card-body">
                         <address>
                             <strong>Our Venue</strong><br>
                             12345 New York, Street 125<br>
@@ -569,36 +556,11 @@ OUR TEAM
                         </div>
                     </div>
                 </div>
-            </div><!--/.col-md-6-->
-        </div><!--/.row-->
-    </div><!--/.container-->
-
-    <!-- Contact Form -->
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="contact-form">
-                    <h3>Contact Form</h3>
-                    <form id="main-contact-form" name="contact-form" method="post" action="#">
-                        <div class="form-group">
-                            <input type="text" name="name" class="form-control" placeholder="Name" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" name="email" class="form-control" placeholder="Email" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="subject" class="form-control" placeholder="Subject" required>
-                        </div>
-                        <div class="form-group">
-                            <textarea name="message" class="form-control" rows="8" placeholder="Message" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Send Message</button>
-                    </form>
-                </div>
             </div>
         </div>
-    </div><!--/.container-->
-</section><!--/#contact-us-->
+    </div>
+</section>
+
 
 <script>
     function initMap() {
@@ -649,6 +611,13 @@ OUR TEAM
 	<script type="text/javascript" src="js/slitslider-custom.js"></script>
     <script src="js/custom-scripts.js"></script>
 	<script src="js/banner.js"> </script>
+	<script>
+	document.querySelectorAll('.learn-more-btn').forEach(button => {
+    button.addEventListener('click', () => {
+        alert('More information about this activity will be displayed here.');
+    });
+});
+</script>
 	
 </body>
 </html>
