--- a/index.html
+++ b/index.html
@@ -45,30 +45,46 @@
                         <li class="scroll"><a href="#our-team">Our Team</a></li>
 						<li class="scroll"><a href="#portfolio">Gallery</a></li>
                         <li class="scroll"><a href="#upcoming-events">Upcoming events</a></li>
+						<li class="scroll"><a href="#hero-action-section">Knowledge Hub</a></li> 
                         <li class="scroll"><a href="#contact-us">Contact</a></li> 
-                        <li class="scroll"><a href="#hero-action-section">Knowledge Hub</a></li> 						
+                        						
                     </ul>
                 </div>
             </div><!--/.container-->
         </nav><!--/nav-->
     </header><!--/header-->
 
-    <section class="demo-2">
+   <section class="demo-2">
     <div id="slider" class="sl-slider-wrapper">
         <div class="sl-slider">
+            <!-- Slide 1 -->
             <div class="sl-slide" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
                 <div class="sl-slide-inner">
                     <div class="bg-img bg-img-1"></div>
+                    <div class="slide-text">
+                        <h1>AP-GAINED</h1>
+                        <h3>Asia Pacific - Generative AI Integration for NREN Enhancement & Development</h3>
+                    </div>
                 </div>
             </div>
+            <!-- Slide 2 -->
             <div class="sl-slide" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
                 <div class="sl-slide-inner">
                     <div class="bg-img bg-img-2"></div>
+                    <div class="slide-text">
+                        <h1>AP-GAINED</h1>
+                        <h3>Asia Pacific - Generative AI Integration for NREN Enhancement & Development</h3>
+                    </div>
                 </div>
             </div>
+            <!-- Slide 3 -->
             <div class="sl-slide" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
                 <div class="sl-slide-inner">
                     <div class="bg-img bg-img-3"></div>
+                    <div class="slide-text">
+                        <h1>AP-GAINED</h1>
+                        <h3>Asia Pacific - Generative AI Integration for NREN Enhancement & Development</h3>
+                    </div>
                 </div>
             </div>
         </div><!-- /sl-slider -->
@@ -80,6 +96,7 @@
         </nav>
     </div><!-- /slider-wrapper -->
 </section><!--/#main-slider-->
+
 
 
   
@@ -98,11 +115,11 @@
                 <h3 class="column-title" style="color: lightblue;">AP GAINED Project</h3>
                 <p style="color:grey;">AP-GAINED is a capacity-building initiative designed to empower National Research and Education Networks (NRENs) throughout the Asia Pacific region to effectively harness the power of Generative AI (GenAI).</p>
                 <p style="color:grey;">Many NRENs in Least Developed Countries (LDCs) and Lower Middle-Income Countries (LMICs) struggle with limited resources and expertise to effectively integrate GenAI. The fast-evolving nature of GenAI adds pressure on these resources. This project aims to address this gap by developing a scalable capacity-building program for NREN staff, prioritizing LDCs and LMICs while providing a model that can be applied globally. Unlike existing initiatives focused on technical skills and infrastructure, this program uniquely targets the potential of GenAI, essential for NRENs in LDCs and LMICs to support advanced research, deliver innovative education, and maximize their developmental impact.</p>
-                <ul class="listarrow" style="color:grey;">
-                    <li><i class="fa fa-angle-double-right" style="color:grey;"></i>Building a tiered curriculum</li>
-                    <li><i class="fa fa-angle-double-right" style="color:grey;"></i>Developing a comprehensive knowledge base</li>
-                    <li><i class="fa fa-angle-double-right" style="color:grey;"></i>Emphasizing hands-on application</li>
-                    <li><i class="fa fa-angle-double-right" style="color:grey;"></i>Fostering a community of practice</li>
+                <ul class="listarrow" style="color:black;">
+                    <li><i class="fa fa-angle-double-right"></i>Building a tiered curriculum</li>
+                    <li><i class="fa fa-angle-double-right"></i>Developing a comprehensive knowledge base</li>
+                    <li><i class="fa fa-angle-double-right" style="color:black;"></i>Emphasizing hands-on application</li>
+                    <li><i class="fa fa-angle-double-right" style="color:black;"></i>Fostering a community of practice</li>
                 </ul>
                 <a href="about.html">
                     <button class="learn-more-btn">Learn more</button>
@@ -158,17 +175,7 @@
     </div><!--/.container-->
 </section><!--/#services-->
 
-<section id="hero-action-section" class="hero-action-section">
-		<!-- .Container -->
-		<div class="container ow-section">
-			<h3 class="hero-action-subtitle">Bring Your Ideas to Life with AI Magic</h3>
-			<h4 class="hero-action-title">Empowering your creativity with cutting-edge technology.</h4>
-			<p class="hero-action-description">Explore the power of AI to transform your concepts into reality. 
-			</p>
-			<p><a href="#" class="get-started">Get It Now!!</a></p>
-		</div><!-- /.Container -->
-	</section>
-	
+
 
 	
      <section id="our-team">
@@ -502,7 +509,17 @@ OUR TEAM
         </div>
     </section><!--/#business-stats-->
 
-  
+  <section id="hero-action-section" class="hero-action-section">
+		<!-- .Container -->
+		<div class="container ow-section">
+			<h3 class="hero-action-subtitle">Bring Your Ideas to Life with AI Magic</h3>
+			<h4 class="hero-action-title">Empowering your creativity with cutting-edge technology.</h4>
+			<p class="hero-action-description">Explore the power of AI to transform your concepts into reality. 
+			</p>
+			<p><a href="#" class="get-started">Get It Now!!</a></p>
+		</div><!-- /.Container -->
+	</section>
+	
   <section id="contact-us">
     <div class="container">
         <div class="section-header">
