--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title wow fadeInDown">
-OUR TEAM
+OUR COUNTERPARTS
 </h2>
 <p class="wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p> 
             </div>
