--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title wow fadeInDown">
-OUR COUNTERPARTS
+OUR PARTNERS
 </h2>
 <p class="wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p> 
             </div>
@@ -196,7 +196,7 @@ OUR COUNTERPARTS
                         </div>
                         <div class="team-info">
                             <h3>APU</h3>
-                            <span>ASIA PASIFIC UNIVERSITY OF TECHNOLOGY AND INNOVATION</span> 
+                            <span>ASIA PACIFIC UNIVERSITY OF TECHNOLOGY AND INNOVATION</span> 
                         </div> 
                         <ul class="social-icons">
                             <li><a href="https://m.facebook.com/apuniversity/"><i class="fa fa-facebook"></i></a></li>
@@ -229,14 +229,14 @@ OUR COUNTERPARTS
                             <img class="img-responsive" src="images/team/03.png" alt="">
                         </div>
                         <div class="team-info">
-                            <h3>APNIC</h3>
-                            <span>ASIA PASIFIC NETWORK INFORMATION CENTER</span> 
+                            <h3>BdREN</h3>
+                            <span>BANGLADESH RESEARCH AND EDUCATION NETWORK</span> 
                         </div> 
                         <ul class="social-icons">
-                            <li><a href="https://m.facebook.com/APNIC/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://x.com/apnic?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.apnic.net/"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="https://au.linkedin.com/company/apnic"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.facebook.com/BdRENUGC/"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://x.com/bdrenugc?lang=en"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.bdren.net.bd/"><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/bangladesh-research-&-education-network-bdren-?originalSubdomain=bd"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -246,12 +246,12 @@ OUR COUNTERPARTS
                             <img class="img-responsive" src="images/team/04.png" alt="">
                         </div>
                         <div class="team-info">
-                            <h3>ISIF ASIA</h3>
+                            <h3>ISIF ASIA WITH APNIC FOUNDATION</h3>
                             <span>INFORMATION SOCIETY INNOVATION FUND IN ASIA</span> 
                         </div> 
                         <ul class="social-icons">
                             <li><a href="https://www.facebook.com/ISIF.asia/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://www.linkedin.com/posts/apnic-foundation_grants-asiapacific-fundingnews-activity-7160107128668491776-Qlix/"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://x.com/isif_asia?lang=en"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://apnic.foundation/isif-asia/apply-for-funding/"><i class="fa fa-google-plus"></i></a></li>
                             <li><a href="https://www.linkedin.com/posts/apnic-foundation_grants-asiapacific-fundingnews-activity-7160107128668491776-Qlix/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
@@ -508,17 +508,19 @@ OUR COUNTERPARTS
             </div>
         </div>
     </section><!--/#business-stats-->
+<!-- 
+<section id="hero-action-section" class="hero-action-section">
+    <!-- .Container -->
+    <!--<div class="container ow-section">
+        <h3 class="hero-action-subtitle">Bring Your Ideas to Life with AI Magic</h3>
+        <h4 class="hero-action-title">Empowering your creativity with cutting-edge technology.</h4>
+        <p class="hero-action-description">Explore the power of AI to transform your concepts into reality. 
+        </p>
+        <p><a href="#" class="get-started">Get It Now!!</a></p>
+    </div><!-- /.Container -->
+</section> 
+-->
 
-  <section id="hero-action-section" class="hero-action-section">
-		<!-- .Container -->
-		<div class="container ow-section">
-			<h3 class="hero-action-subtitle">Bring Your Ideas to Life with AI Magic</h3>
-			<h4 class="hero-action-title">Empowering your creativity with cutting-edge technology.</h4>
-			<p class="hero-action-description">Explore the power of AI to transform your concepts into reality. 
-			</p>
-			<p><a href="#" class="get-started">Get It Now!!</a></p>
-		</div><!-- /.Container -->
-	</section>
 	
   <section id="contact-us">
     <div class="container">
@@ -527,33 +529,7 @@ OUR COUNTERPARTS
             <p class="wow fadeInDown">Get in touch with us through social media or our contact information below.</p>
         </div>
 
-        <div class="row">
-            <!-- Contact Form Card -->
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Contact Form</h3>
-                    </div>
-                    <div class="card-body">
-                        <form id="main-contact-form" name="contact-form" method="post" action="#">
-                            <div class="form-group">
-                                <input type="text" name="name" class="form-control" placeholder="Name" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="email" name="email" class="form-control" placeholder="Email" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="text" name="subject" class="form-control" placeholder="Subject" required>
-                            </div>
-                            <div class="form-group">
-                                <textarea name="message" class="form-control" rows="8" placeholder="Message" required></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Send Message</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-
+        
             <!-- Contact Information Card -->
             <div class="col-sm-6">
                 <div class="card">
@@ -563,13 +539,14 @@ OUR COUNTERPARTS
                     <div class="card-body">
                         <address>
                             <strong>Our Venue</strong><br>
-                            12345 New York, Street 125<br>
-                            United States 94107<br>
-                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> <a href="tel:+1234567890">+123 456 7890</a><br>
-                            <abbr title="Email"><i class="fa fa-envelope"></i></abbr> <a href="mailto:info@example.com">info@example.com</a>
+                            Information Technology Center,University of Peradeniya<br>
+                            Peradeniya 20400
+Sri Lanka<br>
+                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> <a href="tel:+94 81 200 3030">+94 81 200 3030</a><br>
+                            <abbr title="Email"><i class="fa fa-envelope"></i></abbr> <a href="learn@learn.ac.lk">learn@learn.ac.lk</a>
                         </address>
                         <div style="width: 100%; height: 200px; overflow: hidden;">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.583612087554!2d-73.98542848415363!3d40.74881797932754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259ab4b1b84f3%3A0x7c5e5e0d178b3bd9!2sEmpire%20State%20Building!5e0!3m2!1sen!2sus!4v1635934538764!5m2!1sen!2sus" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.lk/maps/place/Information+Technology+Centre/@7.2564092,80.5929948,17z/data=!3m1!4b1!4m6!3m5!1s0x3ae368d30a2a4d8b:0xe2cfbe597cbb262c!8m2!3d7.2564039!4d80.5955697!16s%2Fg%2F1hf0z5fw5?entry=ttu&g_ep=EgoyMDI0MDgyMS4wIKXMDSoASAFQAw%3D%3D" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
@@ -603,13 +580,11 @@ OUR COUNTERPARTS
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
-                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    </ul>
+                        <li><a href="https://www.facebook.com/learn.ac.lk?mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/lk_learn"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="http://www.learn.ac.lk/"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="https://lk.linkedin.com/company/learn-srilanka"><i class="fa fa-linkedin"></i></a></li> 
+                         </ul>
                 </div>
             </div>
         </div>
