--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ OUR PARTNERS
                             Peradeniya 20400
 Sri Lanka<br>
                             <abbr title="Phone"><i class="fa fa-phone"></i></abbr> <a href="tel:+94 81 200 3030">+94 81 200 3030</a><br>
-                            <abbr title="Email"><i class="fa fa-envelope"></i></abbr> <a href="learn@learn.ac.lk">learn@learn.ac.lk</a>
+                            <abbr title="Email"><i class="fa fa-envelope"></i></abbr> <a href="learn@ac.lk">learn@learn.ac.lk</a>
                         </address>
                         <div style="width: 100%; height: 200px; overflow: hidden;">
                             <iframe src="https://www.google.lk/maps/place/Information+Technology+Centre/@7.2564092,80.5929948,17z/data=!3m1!4b1!4m6!3m5!1s0x3ae368d30a2a4d8b:0xe2cfbe597cbb262c!8m2!3d7.2564039!4d80.5955697!16s%2Fg%2F1hf0z5fw5?entry=ttu&g_ep=EgoyMDI0MDgyMS4wIKXMDSoASAFQAw%3D%3D" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -558,7 +558,7 @@ Sri Lanka<br>
 
 <script>
     function initMap() {
-        var venueLocation = {lat: 40.748817, lng: -73.985428}; // Replace with actual coordinates
+        var venueLocation = {lat: 7.25668, lng: 80.59566}; // Replace with actual coordinates
         var map = new google.maps.Map(document.getElementById('map'), {
             zoom: 15,
             center: venueLocation
