--- a/index.html
+++ b/index.html
@@ -522,31 +522,30 @@ OUR PARTNERS
 -->
 
 	
-  <section id="contact-us">
+  <section id="contact-us" style="background-color: #DAEAF7; padding: 50px 0;">
     <div class="container">
-        <div class="section-header">
+        <div class="section-header text-center">
             <h2 class="section-title wow fadeInDown">Contact Us</h2>
             <p class="wow fadeInDown">Get in touch with us through social media or our contact information below.</p>
         </div>
 
-        
+        <div class="d-flex justify-content-center">
             <!-- Contact Information Card -->
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-header">
+            <div class="col-sm-8">
+                <div class="card" style="padding: 20px; border-radius: 10px;">
+                    <div class="card-header text-center">
                         <h3>Contact Information</h3>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <address>
                             <strong>Our Venue</strong><br>
-                            Information Technology Center,University of Peradeniya<br>
-                            Peradeniya 20400
-Sri Lanka<br>
-                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> <a href="tel:+94 81 200 3030">+94 81 200 3030</a><br>
-                            <abbr title="Email"><i class="fa fa-envelope"></i></abbr> <a href="learn@ac.lk">learn@learn.ac.lk</a>
+                            Information Technology Center, University of Peradeniya<br>
+                            Peradeniya 20400, Sri Lanka<br>
+                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> <a href="tel:+94812003030">+94 81 200 3030</a><br>
+                            <abbr title="Email"><i class="fa fa-envelope"></i></abbr> <a href="mailto:learn@ac.lk">learn@learn.ac.lk</a>
                         </address>
-                        <div style="width: 100%; height: 200px; overflow: hidden;">
-                            <iframe src="https://www.google.lk/maps/place/Information+Technology+Centre/@7.2564092,80.5929948,17z/data=!3m1!4b1!4m6!3m5!1s0x3ae368d30a2a4d8b:0xe2cfbe597cbb262c!8m2!3d7.2564039!4d80.5955697!16s%2Fg%2F1hf0z5fw5?entry=ttu&g_ep=EgoyMDI0MDgyMS4wIKXMDSoASAFQAw%3D%3D" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <div style="width: 100%; height: 300px; margin-top: 20px;">
+                            <iframe src="https://www.google.lk/maps/place/Information+Technology+Centre/@7.2564092,80.5929948,17z/data=!3m1!4b1!4m6!3m5!1s0x3ae368d30a2a4d8b:0xe2cfbe597cbb262c!8m2!3d7.2564039!4d80.5955697!16s%2Fg%2F1hf0z5fw5?entry=ttu&g_ep=EgoyMDI0MDgyMS4wIKXMDSoASAFQAw%3D%3D" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
@@ -554,22 +553,6 @@ Sri Lanka<br>
         </div>
     </div>
 </section>
-
-
-<script>
-    function initMap() {
-        var venueLocation = {lat: 7.25668, lng: 80.59566}; // Replace with actual coordinates
-        var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 15,
-            center: venueLocation
-        });
-        var marker = new google.maps.Marker({
-            position: venueLocation,
-            map: map
-        });
-    }
-</script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
 
 
     <footer id="footer">
