--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ OUR PARTNERS
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="200ms">
                         <div class="team-img">
-                            <img class="img-responsive" src="images/team/03.png" alt="">
+                            <img class="img-responsive" src="images/team/03.jpg" alt="">
                         </div>
                         <div class="team-info">
                             <h3>BdREN</h3>
@@ -532,7 +532,7 @@ OUR PARTNERS
         <div class="d-flex justify-content-center">
             <!-- Contact Information Card -->
             <div class="col-sm-8">
-                <div class="card" style="padding: 20px; border-radius: 10px;">
+                <div class="card" style="padding: 40px; border-radius: 10px;">
                     <div class="card-header text-center">
                         <h3>Contact Information</h3>
                     </div>
@@ -542,19 +542,17 @@ OUR PARTNERS
                             Information Technology Center, University of Peradeniya<br>
                             Peradeniya 20400, Sri Lanka<br>
                             <abbr title="Phone"><i class="fa fa-phone"></i></abbr> <a href="tel:+94812003030">+94 81 200 3030</a><br>
-                            <abbr title="Email"><i class="fa fa-envelope"></i></abbr> <a href="mailto:learn@ac.lk">learn@learn.ac.lk</a>
+                            <abbr title="Email"><i class="fa fa-envelope"></i></abbr> <a href="mailto:learn@ac.lk">learn@ac.lk</a>
                         </address>
                         <div style="width: 100%; height: 300px; margin-top: 20px;">
-                            <iframe src="https://www.google.lk/maps/place/Information+Technology+Centre/@7.2564092,80.5929948,17z/data=!3m1!4b1!4m6!3m5!1s0x3ae368d30a2a4d8b:0xe2cfbe597cbb262c!8m2!3d7.2564039!4d80.5955697!16s%2Fg%2F1hf0z5fw5?entry=ttu&g_ep=EgoyMDI0MDgyMS4wIKXMDSoASAFQAw%3D%3D" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                        </div>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.8632203946286!2d80.5955697!3d7.256403899999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae368d30a2a4d8b%3A0xe2cfbe597cbb262c!2sInformation%20Technology%20Centre!5e0!3m2!1sen!2slk!4v1724801288908!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-
     <footer id="footer">
         <div class="container">
             <div class="row">
