--- a/index.html
+++ b/index.html
@@ -184,9 +184,6 @@
                 <h2 class="section-title wow fadeInDown">
 OUR PARTNERS
 </h2>
-<p class="wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p> 
-            </div>
-			
 			 	
             <div class="row text-center">
 		    <div class="col-md-3 col-sm-6 col-xs-12">
@@ -195,6 +192,7 @@ OUR PARTNERS
                             <img class="img-responsive" src="images/team/02.jpg" alt="">
                         </div>
                         <div class="team-info">
+				<h3>LEAD IMPLEMENTATION PARTNER - SRI LANKA</h3>
                             <h3>LEARN</h3>
                             <span>LANKA EDUCATION AND RESEARCH NETWORK</span> 
                         </div> 
@@ -212,6 +210,7 @@ OUR PARTNERS
                             <img class="img-responsive" src="images/team/03.jpg" alt="">
                         </div>
                         <div class="team-info">
+				<h3>COLLABORATIVE IMPLEMENTATION PARTNER - BANGLADESH</h3>
                             <h3>BdREN</h3>
                             <span>BANGLADESH RESEARCH AND EDUCATION NETWORK</span> 
                         </div> 
@@ -229,6 +228,7 @@ OUR PARTNERS
                             <img class="img-responsive" src="images/team/04.png" alt="">
                         </div>
                         <div class="team-info">
+				<h3>FUNDING PARTNER - ASIA PACIFIC REGION</h3>
                             <h3>ISIF ASIA WITH APNIC FOUNDATION</h3>
                             <span>INFORMATION SOCIETY INNOVATION FUND IN ASIA</span> 
                         </div> 
@@ -246,6 +246,7 @@ OUR PARTNERS
                             <img class="img-responsive" src="images/team/01.jpg" alt="">
                         </div>
                         <div class="team-info">
+				<h3>COLLABORATIVE IMPLEMENTATION PARTNER - MALAYSIA</h3>
                             <h3>APU</h3>
                             <span>ASIA PACIFIC UNIVERSITY OF TECHNOLOGY AND INNOVATION</span> 
                         </div> 
